fixed meeting icon spacing

--- a/Dashboard/src/App.css
+++ b/Dashboard/src/App.css
@@ -252,10 +252,13 @@ LAMP CONTENT
 
 /* 
 ====================================
-LAMP CONTENT
+DB1042 CONTENT
 ==================================== 
 */
-
+.meeting-icons {
+  padding-right: 1em;
+  padding-left: 1em;
+}
 
 /* 
 ====================================
